# verum

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-tech-stack.md
src/verum/: __init__.py
src/verum/backends/: __init__.py
src/verum/core/: __init__.py
src/verum/ui/: __init__.py
tests/unit/: test_package.py
